Add verb to title
The main page title was not clear, adding a verb to better explain what
we are doing.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-        <title>How to Git</title>
+        <title>Learn how to Git</title>
 </head>
 <body>
         In this tutorial you'll
