Motivational content in body
Add a motivational phrase to the body of the main page to convince
attendees that writing good commits is a good practice.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         In this tutorial you'll
         learn how to use Git to
         better organize your
-        software
+        software.
+        <br />
+        It's worth it, trust me.
 </body>
 </html>
