Title is again more explicit
Improved title with a how to.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-        <title>Show me how to Git</title>
+        <title>Show me how to use Git</title>
 </head>
 <body>
         In this tutorial you'll
