Title to great way
Changed title to say it's great.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-        <title>Show me how to use Git</title>
+        <title>Show me how to use Git in an great way</title>
 </head>
 <body>
         In this tutorial you'll
